# RRM

abb_camera_simulation/config/: abb_irb_4600.yaml  abb_irb_control.yaml
abb_camera_simulation/launch/: abb_control.launch  abb_gazebo.launch  camera_sim.launch  trajectory_controller.launch
abb_camera_simulation/urdf/: abb_irb4600_60_205.gazebo  abb_irb4600_60_205.urdf  abb_irb4600_60_205.xacro  abb_irb4600_60_205_macro.xacro  mrs_rvr_wrld
abb_cv7_moveit/: .setup_assistant  CMakeLists.txt  package.xml
abb_cv7_moveit/config/: abb_irb.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
abb_cv7_moveit/launch/: abb_irb_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
abb_irb4600_moveit_config/: .setup_assistant  package.xml
abb_irb4600_moveit_config/config/: abb_irb4600_60_205.srdf
abb_irb4600_moveit_config/launch/: abb_irb4600_60_205_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
abb_launch_pkg/: CMakeLists.txt  package.xml
abb_launch_pkg/launch/: abb_launch_cv11.launch
abb_scanner_pkg/: CMakeLists.txt  package.xml
abb_scanner_pkg/include/abb_scanner_pkg/: LaserScanToPointCloud.h
abb_scanner_pkg/launch/: abb_scanner_pkg.launch
abb_scanner_pkg/src/: LaserScanToPointCloud.cpp  scanner_node.cpp
rrm_cv1/: CMakeLists.txt
rrm_cv1_trebula/: CMakeLists.txt  package.xml
rrm_cv3/: CMakeLists.txt
rrm_cv3_trebula/: CMakeLists.txt
rrm_cv5_manipulator_trebula/: .setup_assistant  CMakeLists.txt
rrm_cv5_move_interface_trebula/: CMakeLists.txt  package.xml
rrm_cv5_move_interface_trebula/launch/: move_group_interface_trebula.launch
rrm_cv5_move_interface_trebula/src/: move_group_interface_trebula.cpp
(+51 files in other folders)
