<package format="3">
  <name>rrm_cv5_move_interface_trebula</name>
  <version>0.0.0</version>
  <description>The rrm_cv5_move_interface_trebula package</description>
  <maintainer email="marek@todo.todo">marek</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>interactive_markers</depend>
  <depend>tf2_ros</depend>
  <depend>tf</depend>
  <depend>tf2_eigen</depend>
  <depend>pcl_conversions</depend>
  <depend>roscpp</depend>
  <depend>moveit_visual_tools</depend>
  <depend>pcl_ros</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>pluginlib</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_perception</depend>
  <depend>std_msgs</depend>
  <depend>rosbag</depend>
  <depend>tf2_geometry_msgs</depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_export_depend>moveit_fake_controller_manager</build_export_depend>
  <build_export_depend>panda_moveit_config</build_export_depend>
  <build_export_depend>joy</build_export_depend>
  <build_export_depend>moveit_commander</build_export_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>